--- a/Sample app/Navigation/en.lproj/Localizable.strings
+++ b/Sample app/Navigation/en.lproj/Localizable.strings
@@ -58,6 +58,9 @@
 // Activity Map Action Sheet
 "AMASPick" = "Destinations";
 
+// Activity Map Alertview
+"AMANoRoute" = "Route to %@ cannot be computed";
+
 // Fragment Drawer
 "FDStop" = "Stop navigation";
 
