--- a/Sample app/Navigation/en.lproj/Localizable.strings
+++ b/Sample app/Navigation/en.lproj/Localizable.strings
@@ -24,6 +24,9 @@
 "FSAccountHint" = "Account";
 "FSPasswordHint" = "Password";
 "FSConnecting" = "Connecting...";
+"FSAccountPasswordError" = "Enter account and password";
+"FSAccountError" = "Enter account";
+"FSPasswordError" = "Enter password";
 "FSConnectError" = "Cannot connect to server";
 "FSLibError" = "Indoor library cannot be started";
 "FSLocServicesError" = "Location services are not enabled";
@@ -80,13 +83,17 @@
 "FDRestore" = "Navigate";
 "FDDelete" = "Delete";
 "FDDeleteToast" = "Marker deleted";
-"FDUserProfile" = "User Profile";
+"FDUserProfile" = "Profile";
 
 
 // Instructions
 "FIInstructions" = "Instructions";
 
 // UserProfile
+"FUPSaveButton" = "Save";
+"FUPUser" = "User";
+"FUPNavigation" = "Navigation";
 "FUPNoSettings" = "Settings are not set";
-"FUPSaved" = "User Profile has been updated";
-"FUPNotSaved" = "User Profile cannot be updated";
+"FUPSaved" = "Your profile has been updated";
+"FUPNotSaved" = "Your Profile cannot be updated";
+"FUPNoSettingsText" = "No settings defined in the backoffice yet";
