--- a/Sample app/Navigation/fr.lproj/Localizable.strings
+++ b/Sample app/Navigation/fr.lproj/Localizable.strings
@@ -24,6 +24,9 @@
 "FSAccountHint" = "Compte";
 "FSPasswordHint" = "Mot de passe";
 "FSConnecting" = "Connexion en cours...";
+"FSAccountPasswordError" = "Entrez le compte et passe nom du";
+"FSAccountError" = "Entrez le nom du compte";
+"FSPasswordError" = "Entrez le mot de passe";
 "FSConnectError" = "Impossible de se connecter au serveur";
 "FSLibError" = "La librairie indoor ne peux pas démarrer";
 "FSLocServicesError" = "Le service de localisation n\'est pas activé";
@@ -80,11 +83,16 @@
 "FDRestore" = "Y aller";
 "FDDelete" = "Supprimer";
 "FDDeleteToast" = "Marker supprimé";
+"FDUserProfile" = "Profile";
 
 // Instructions
 "FIInstructions" = "Instructions";
 
 // UserProfile
-"FUPNoSettings" = "Settings are not set";
-"FUPSaved" = "User Profile has been updated";
-"FUPNotSaved" = "User Profile cannot be updated";
+"FUPSaveButton" = "Sauvegarder";
+"FUPUser" = "Utilisateur";
+"FUPNavigation" = "Navigation";
+"FUPNoSettings" = "Pas de paramètres";
+"FUPSaved" = "Votre profil a été mis à jour";
+"FUPNotSaved" = "Your profile cannot be updated";
+"FUPNoSettingsText" = "Pas encore de paramètres définis dans le backoffice";
