--- a/Routing.bundle/fr.lproj/Localizable.strings
+++ b/Routing.bundle/fr.lproj/Localizable.strings
@@ -6,6 +6,8 @@
 "routing_upstairs" = "Montez l'escalier jusqu'à l'étage %i";
 "routing_downelevator" = "Prenez l'ascenceur et descendez à l'étage %i";
 "routing_upelevator" = "Prenez l'ascenceur et montez à l'étage %i";
+"routing_downescalator" = "Prenez l'escalateur et descendez à l'étage %i";
+"routing_upescalator" = "Prenez l'escalateur et montez à l'étage %i";
 "routing_arrival" = "Vous arrivez à destination";
 "routing_straight" = "Continuez tout droit";
 
